--- a/style.css
+++ b/style.css
@@ -11,22 +11,95 @@ body {
         display: flex;
         height: 100vh;
         padding: 0.5rem;
+        
     }
+
+.header{
+    width: 100%;
+    height: 4rem;
+    background-color: #121212;
+    display: flex;
+}
 
 .sidebar{
         background-color:black;
         width: 340px;
         border-radius: 1rem;    /*16px*/
         margin-right: 0.5rem;
-
+        overflow: hidden;
     }
-
+    
+.rowp1,.rowp2,.rowp3{
+    display: flex;
+    opacity: 0.5;
+    font-size: small;
+    cursor: pointer;
+    
+}
+#heading1,#headingp1{
+    font-size:1.25rem;
+    display: inline-block; 
+    margin:0; 
+    vertical-align: middle;
+}
+#heading1:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+#heading1{
+    margin-top:1rem;
+}
+#headingp1{
+    margin-left: 65rem;
+    font-size: small;
+    font-weight: 600;
+    align-items: end;
+}
+#headingp1:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+#p{
+    font-size: small;
+}
+#p:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+#p2:hover{
+text-decoration: underline;
+}
+#p4{
+    font-size: 0.85rem;
+    opacity: 0.7;
+}
+#p4:hover{
+   opacity: 1;
+   cursor: pointer;
+   text-decoration: underline;
+}
+#p5{
+    font-size: 0.85rem;
+    opacity: 0.7;
+}
+#p5:hover{
+    text-decoration: none;
+}
+#p6{
+    font-weight: 600;
+    font-size: small;
+}
+#p7{
+    font-size: 0.9rem;
+}
 .main-content{
         background-color: #121212;
         flex: 1;
         border-radius: 1rem;
-        overflow: auto;
+        overflow: scroll;
         padding: 0 1.5rem 0 1.5rem;
+        /* overflow-x: scroll; */
+        /* overflow-y: scroll; */
 }
 
 .music-player{
@@ -45,8 +118,8 @@ a{
 .nav{
     background-color:#121212 ;
     border-radius: 1rem; 
-    display: flex;
-    flex-direction: column;
+     display: flex; 
+    flex-direction: row;
     justify-content: center;
     height: 100px;
     padding: 0.5rem,0.75rem;
@@ -57,6 +130,7 @@ a{
     line-height :2.5rem;
     opacity: 0.7;
     padding: 0.5rem 0.75rem ;
+    
 }
 .nav-option:hover {
     line-height :2.5rem;
@@ -64,7 +138,7 @@ a{
 }
 
 .nav-option i{
-    font-size: 1.25rem;
+    font-size: 1.74rem;
 }
 .nav-option a{
     font-size: 1rem;
@@ -110,9 +184,26 @@ a{
     padding: 0.75rem 1rem;
 
 }
+.lib-box1{
+border-left: 2px solid black;
+border-radius: 0.5rem;
+box-shadow: 2rem;
+background-color:#232323 ;
+height: 8rem;
+padding:1px 1px 1px 1rem;
+}
+.lib-box2{
+margin-top: 2rem;
+border-left: 2px solid black;
+border-radius: 0.5rem;
+box-shadow: 2rem;
+background-color:#232323 ;
+height: 8rem;
+padding:1px 1px 1px 1rem;
+}
 .box-p1{
     font-size: 1rem;
-    font-weight: 500;
+    font-weight: 700;
 }
 .box-p2{
     font-size: 0.85rem;
@@ -128,13 +219,24 @@ a{
     height: 2rem;
     width: fit-content;
 }
+.badge:hover{
+    font-size: 0.75rem;
+    cursor: pointer;
+}
 
 .dark-badge{
     background-color: #000;
     color: #fff;
 
 }
-
+.signupbtn{
+    display: flex;
+}
+#playicon{
+    height: 4rem;
+    width: 3rem;
+    border-radius: 50%; 
+}
 .sticky-nav{
     position:sticky;
     top:0;
@@ -167,32 +269,78 @@ a{
     }
 }
 
-.card{
-    background-color: #232323;
-    width: 150px;
+.cards-container-row1{
+    background-color: #121212;
+    width: 175px;
+    height: 240px;
     border-radius:0.5rem ;
     padding:1rem ;
     margin-left: 1.5rem;
+    margin: 0%;
 }
-
+.cards-container-row1:hover{
+    box-shadow:1px 4px 1px  #232323;
+    background-color: #232323;
+    cursor: pointer;
+}
 .cards-container{
     display:flex ;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
+    margin-left: 0%;
+    padding: 0;
+}
+.card-img-row2{
+    width:180px;
+    height: 170px;
+    border-radius: 0.5rem;
 }
 
 .card-img{
     width: 100%;
     border-radius:0.5rem ;
-
+    gap: 0;
+}
+.card-img-row1{
+    height: 170px;
+    width: 170px;
+    border-radius: 50%;
+    margin-left: 0;
+    padding:0;
 }
 
 .card-title{
     font-weight:600 ;
 }
-
+.card-title:hover{
+    text-decoration: underline;
+}
 .card-info{
     font-size: 0.75rem;
     opacity: 0.8;
+}
+.container{
+    display: flex;
+    justify-content: space-between;
+}
+#si1{
+    font-size:1.3rem;
+    border-radius: 50%;
+    color: #fff;
+}
+.s1{
+    height: 3rem;
+    width: 1rem;
+    align-content: center;
+    padding-left: 1rem;
+    background-color: #232323;
+    padding-right:1rem ;
+    border-radius: 50%;
+    opacity: 1;
+}
+.s1:hover{
+    box-shadow:1px 14px 16px #4e4e4e;
+    opacity: 0.9;
+    background-color: #232323;
 }
 
 .footer{
@@ -210,9 +358,11 @@ a{
 
 }
 .music-player{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    /* display: flex; */
+    height: 7rem;
+    /* flex-direction: column; */
+    /* justify-content: center; */
+    /* align-items: center; */
 }
 .album{
     width: 25%;
@@ -268,5 +418,4 @@ a{
     background-color: #1bd760;
     border-radius: 50%;
     margin-top: -6px;
-
 }
