--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 body {
       font-family: "Montserrat", sans-serif;
       margin: 0;
+      padding: 0;
       background-color: black;
       color: #fff;
-      overflow: hidden;
+      overflow-y: hidden;
+      overflow-x: hidden;
     }
 
 .main {
@@ -16,25 +18,56 @@ body {
 
 .header{
     width: 100%;
-    height: 4rem;
+    height: 5rem;
     background-color: #121212;
     display: flex;
+    z-index: 100;
+    justify-content:space-between;
+
 }
+.main-content{
+    background-color: #121212;
+    flex: 1;
+    border-radius: 1rem;
+    overflow: scroll;
+    scrollbar-width: thin;
+    scrollbar-color: #888 #121212;
+    padding: 0 1.5rem 0 1.5rem;
+   
+}
+
 
 .sidebar{
         background-color:black;
         width: 340px;
-        border-radius: 1rem;    /*16px*/
+        border-radius: 1rem;   
         margin-right: 0.5rem;
-        overflow: hidden;
+        scrollbar-width: thin;
     }
     
-.rowp1,.rowp2,.rowp3{
+.rowp1,.rowp2{
     display: flex;
     opacity: 0.5;
-    font-size: small;
+    font-size: 0.7rem;
     cursor: pointer;
     
+}
+#searchopt{
+width: 25rem;
+height: 3rem;
+background-color: #232323;
+opacity: 0.7;
+border-radius: 2rem;
+align-content: center;
+padding-left: 1rem;
+}
+.nav-option3{
+align-self: center;
+margin-left: 23rem;
+}
+.nav-option3:hover{
+    opacity: 1;
+    color: #fff;
 }
 #heading1,#headingp1{
     font-size:1.25rem;
@@ -60,7 +93,7 @@ body {
     cursor: pointer;
 }
 #p{
-    font-size: small;
+    font-size: 0.7rem;
 }
 #p:hover{
     text-decoration: underline;
@@ -92,19 +125,32 @@ text-decoration: underline;
 #p7{
     font-size: 0.9rem;
 }
-.main-content{
-        background-color: #121212;
-        flex: 1;
-        border-radius: 1rem;
-        overflow: scroll;
-        padding: 0 1.5rem 0 1.5rem;
-        /* overflow-x: scroll; */
-        /* overflow-y: scroll; */
+#eng{
+    color: #fff;
+    font-weight: 700;
+    font-size: small;
+    height: 1rem;
+    justify-items: center;
+    padding:0.5rem;
+}
+.english{
+    height: 2rem;
+    width: 5rem;
+    background-color: black;
+    border-radius: 2rem ;
+    border-color: #fff;
+}
+.english:hover{
+    transform: scale(1.1);
+    transition: 0.3s;
+    cursor: pointer;
 }
 
 .music-player{
         background-color:black;
         position: fixed;
+        display: flex;
+        flex-direction: row;
         bottom: 0px;
         width: 100%;
         height: 72px;
@@ -121,7 +167,6 @@ a{
      display: flex; 
     flex-direction: row;
     justify-content: center;
-    height: 100px;
     padding: 0.5rem,0.75rem;
 
 }
@@ -130,11 +175,12 @@ a{
     line-height :2.5rem;
     opacity: 0.7;
     padding: 0.5rem 0.75rem ;
-    
+    margin-top: 1rem;
 }
 .nav-option:hover {
     line-height :2.5rem;
     opacity: 1;
+    cursor: pointer;
 }
 
 .nav-option i{
@@ -144,7 +190,38 @@ a{
     font-size: 1rem;
     margin-left: 1rem;
 }
-
+.login{
+    margin-top: 1.5rem;
+}
+#logbtn{
+    height: 3.2rem;
+    font-size: 1rem;
+    width: 6rem;
+    border-color: #fff;
+    border-radius:2rem ;
+    margin-right: 1rem;
+    font-weight: 700;
+    text-decoration: none;
+}
+#logbtn:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+    transition: 0.3s;
+}
+#signup{
+    font-weight: 700;
+    margin-right: 1rem;
+    color: #a3a3a3;
+    opacity:0.8;
+}
+#signup:hover{
+    opacity: 1;
+    cursor: pointer;
+    color: #fff;
+    transform: scale(1.1);
+    font-size: 1.1rem;
+    transition: 0.3s;
+}
 .library{
     background-color:#121212 ;
     border-radius: 1rem; 
@@ -201,6 +278,7 @@ background-color:#232323 ;
 height: 8rem;
 padding:1px 1px 1px 1rem;
 }
+
 .box-p1{
     font-size: 1rem;
     font-weight: 700;
@@ -222,6 +300,12 @@ padding:1px 1px 1px 1rem;
 .badge:hover{
     font-size: 0.75rem;
     cursor: pointer;
+    transform: scale(1.1);
+    transition: 0.3s;
+}
+.box{
+    line-height: 0%;
+    background-color: #121212;
 }
 
 .dark-badge{
@@ -229,46 +313,49 @@ padding:1px 1px 1px 1rem;
     color: #fff;
 
 }
-.signupbtn{
-    display: flex;
-}
 #playicon{
-    height: 4rem;
-    width: 3rem;
+    position: absolute;
+    top: 48%;
+    left: 76%;
+    height: 3.2rem;
+    width: 2.5rem;
     border-radius: 50%; 
-}
-.sticky-nav{
-    position:sticky;
-    top:0;
-    background-color: #121212;
-    display: flex;
-    justify-content:space-between;
-    align-items: center;
-    padding: 1rem 0 1rem 0;
-    z-index: 10;
+    transform: translate(-10%, -20%);
+    opacity: 0;
+    transition: opacity 0.3s ease,transform 0.3s ease;
+    
 }
 
-.sticky-nav-icons {
-    margin-left: 0.75rem;
-}
-
-.sticky-nav-options{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.sticky-nav-options button{
-    margin-right: 1rem;
-
-}
 
 @media (max-width:1000px){
     .hide{
         display: none;
     }
 }
-
+@media (max-width: 768px) {
+    body {
+      font-size: 90%; 
+    }
+  
+    .container {
+      padding: 1rem; 
+    }
+  
+    .flex-layout {
+      flex-direction: column; 
+    }
+  }
+  
+  
+  @media (max-width: 480px) {
+    body {
+      font-size: 80%; 
+    }
+  
+    main.content{
+      padding: 0.5rem; 
+    }
+  }
 .cards-container-row1{
     background-color: #121212;
     width: 175px;
@@ -277,11 +364,16 @@ padding:1px 1px 1px 1rem;
     padding:1rem ;
     margin-left: 1.5rem;
     margin: 0%;
+    position: relative;
 }
 .cards-container-row1:hover{
     box-shadow:1px 4px 1px  #232323;
     background-color: #232323;
     cursor: pointer;
+}
+
+.cards-container-row1:hover #playicon{
+  opacity: 1;
 }
 .cards-container{
     display:flex ;
@@ -358,64 +450,25 @@ padding:1px 1px 1px 1rem;
 
 }
 .music-player{
-    /* display: flex; */
-    height: 7rem;
-    /* flex-direction: column; */
-    /* justify-content: center; */
-    /* align-items: center; */
-}
-.album{
-    width: 25%;
-    background-color: pink;
-}
-.player{
-    width: 50%;
-    /* background-color: orange; */
-}
-.player-controls{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    height: 5rem;
+    background: linear-gradient(90deg, #a845b0, #5c64cf, #46a8e9);   
+    justify-content: space-between;
+}
+.signupbtn{
+    height: 3.2rem;
+    font-size: 1rem;
+    width: 9rem;
+    border-color: #fff;
+    border-radius:2rem ;
+    margin-top: 1rem;
+    margin-right: 1rem;
+    font-weight: 700;
+    text-decoration: none;
 }
 
-.controls{
-    width: 25%;
-    background-color: green;
-
-}
-
-.player-controls-icons{
-    height: 1rem;
-    margin-right: 1.75rem;
-    opacity: 0.7;
-}
-.player-controls-icons:hover{
-    opacity: 1;
-}
-.playback-bar{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.progress-bar{
-    width: 70%;
-    appearance: none;
-    background-color: transparent;
-    cursor:pointer;
-}
-
-.progress-bar::-webkit-slider-runnable-track{
-    background-color: #ddd;
-    border-radius: 100px;
-    height: 0.2rem;
-}
-
-.progress-bar::-webkit-slider-thumb{
-    appearance: none;
-    height: 1rem;
-    width: 1rem;
-    background-color: #1bd760;
-    border-radius: 50%;
-    margin-top: -6px;
+.signupbtn:hover{
+    transform: scale(1.1);
+    cursor: pointer;
+    transition: 0.3s;
 }
